--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "ebr"
+authors = ["Tyler Neely <t@jujit.su>"]
+description = "simple epoch-based reclamation with low cacheline ping-pong"
 version = "0.0.0"
 edition = "2018"
+license = "MIT/Apache-2.0"
+repository = "https://github.com/spacejam/ebr"
 
 [dependencies]
