--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ version = "0.0.0"
 edition = "2018"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/spacejam/ebr"
+categories = ["concurrency", "data-structures"]
 
-[dependencies]
+[dev-dependencies]
+crossbeam-utils = "*"
