--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "ebr"
 authors = ["Tyler Neely <t@jujit.su>"]
 description = "simple epoch-based reclamation with low cacheline ping-pong"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2018"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/spacejam/ebr"
 categories = ["concurrency", "data-structures"]
 
 [dev-dependencies]
-crossbeam-utils = "*"
+crossbeam-utils = "0.8.5"
