--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "ebr"
 authors = ["Tyler Neely <t@jujit.su>"]
 description = "simple epoch-based reclamation with low cacheline ping-pong"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2018"
 license = "MIT/Apache-2.0"
-repository = "https://github.com/spacejam/ebr"
+repository = "https://github.com/komora-io/ebr"
 categories = ["concurrency", "data-structures"]
 
 [dev-dependencies]
