--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "ebr"
 authors = ["Tyler Neely <tylerneely@gmail.com>"]
 description = "simple epoch-based reclamation with low cacheline ping-pong"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2018"
-license = "GPL-3.0"
+license = "MIT/Apache-2.0"
 repository = "https://github.com/komora-io/ebr"
 keywords = ["epoch", "multi-threaded", "performance", "reclamation", "garbage"]
 categories = ["development-tools", "concurrency", "data-structures", "rust-patterns"]
@@ -14,4 +14,4 @@ readme = "README.md"
 crossbeam-epoch = "0.9.8"
 
 [dependencies]
-shared-local-state = "0.1.0"
+shared-local-state = "0.1.1"
