Make certain aspects of epoch tracking more clear to avoid a potential use after free

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,16 @@
 name = "ebr"
 authors = ["Tyler Neely <tylerneely@gmail.com>"]
 description = "simple epoch-based reclamation with low cacheline ping-pong"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2018"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/komora-io/ebr"
 keywords = ["epoch", "multi-threaded", "performance", "reclamation", "garbage"]
 categories = ["development-tools", "concurrency", "data-structures", "rust-patterns"]
 readme = "README.md"
+
+[features]
+lock_free_delays = []
 
 [dev-dependencies]
 crossbeam-epoch = "0.9.8"
