--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "ebr"
 authors = ["Tyler Neely <tylerneely@gmail.com>"]
 description = "simple epoch-based reclamation with low cacheline ping-pong"
-version = "0.2.8"
-edition = "2018"
-license = "MIT/Apache-2.0"
+version = "0.2.9"
+edition = "2021"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/komora-io/ebr"
 keywords = ["epoch", "multi-threaded", "performance", "reclamation", "garbage"]
 categories = ["development-tools", "concurrency", "data-structures", "rust-patterns"]
